Fix Bug : Table --> font size should be 10px. letter-spacing should be 1.5, all row height should be px

--- a/src/assets/examples/table-native/table-native.component.css
+++ b/src/assets/examples/table-native/table-native.component.css
@@ -38,10 +38,10 @@ td {
 .w50 {
   width: 50%;
 }
-.w70{
+.w70 {
   width: 70%;
 }
-.w30{
+.w30 {
   width: 30%;
 }
 
@@ -65,6 +65,10 @@ td {
   line-height: 18px;
 }
 
-.expand-icon{
-  color: #9f9f9f;
+.expand-icon {
+  color: #c3c3c3;
+  margin-right: 12px;
+  font-size: 24px;
+  height: 24px;
+  width: 24px;
 }
